AArch64: guarantee(val < (1U << nbits)) failed: Field too big for insn

XMLWordPrintable

    • b08
    • aarch64
    • linux

        open/test/hotspot/jtreg/vmTestbase/vm/mlvm/anonloader/stress/byteMutation/Test.java

        ----------System.out:(28/2635)----------
        ### TRACE 1: RNG seed = -3711439522195719720 (0xcc7e516b2a2db9d8)
        For random generator using seed: -3711439522195719720
        To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-3711439522195719720" to command line.
        ### TRACE 1: If the JVM crashes then the class file causing the crash is saved as *_*__AnonkTestee01.class
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/assembler_aarch64.hpp:232
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S61/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/70b0669d-5e9c-4ddd-94e6-e0a4bd1f53bd/runs/29e31a5f-cfc2-4cf2-b396-48c5fdce7d16/workspace/open/src/hotspot/cpu/aarch64/assembler_aarch64.hpp:232), pid=8182, tid=8197
        # guarantee(val < (1U << nbits)) failed: Field too big for insn
        #
        # JRE version: Java(TM) SE Runtime Environment (16.0) (fastdebug build 16-internal+0-2020-06-17-0914171.patric.hedlin.jdk)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-internal+0-2020-06-17-0914171.patric.hedlin.jdk, compiled mode, tiered, compressed oops, g1 gc, linux-aarch64)
        # Problematic frame:
        # V [libjvm.so+0x334c54] Instruction_aarch64::f(unsigned int, int, int)+0xac
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /scratch/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S557/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/254dfa90-fe61-4586-848b-5e9f8e72fb27/runs/afd45016-acc8-41a7-8923-bd6169d7afd6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm/scratch/2/core.8182)
        #
        # An error report file with more information is saved as:
        # /scratch/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S557/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/254dfa90-fe61-4586-848b-5e9f8e72fb27/runs/afd45016-acc8-41a7-8923-bd6169d7afd6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm/scratch/2/hs_err_pid8182.log
        #
        # Compiler replay data is saved as:
        # /scratch/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S557/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/254dfa90-fe61-4586-848b-5e9f8e72fb27/runs/afd45016-acc8-41a7-8923-bd6169d7afd6/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm/scratch/2/replay_pid8182.log
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

          1. hs_err_pid8182.log
            114 kB
          2. replay_pid8182.log
            136 kB
          3. log.txt
            42 kB

              Assignee:
              Patric Hedlin (Inactive)
              Reporter:
              Patric Hedlin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

                Created:
                Updated:
                Resolved: