8247766: [aarch64] guarantee(val < (1U << nbits)) failed: Field too big for insn

Reviewed-by: neliasso, aph